# germanBot

./: .gitignore  CMakeLists.txt  readme.org
src/: auth.hpp  langtool.hpp  main.cpp
